--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.20.0",
+    "react-router-dom": "^6.24.1",
     "sqlite3": "^5.1.7",
     "uuid": "^10.0.0"
   },
